[package]

name = "shiplift"
version = "0.7.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A Rust interface for maneuvering Docker containers"
documentation = "https://docs.rs/shiplift"
homepage = "https://github.com/softprops/shiplift"
repository = "https://github.com/softprops/shiplift"
keywords = ["docker", "unix", "containers", "hyper", "ship"]
license = "MIT"
edition = "2018"
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/shiplift" }
coveralls = { repository = "softprops/shipflit" }
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.13"
byteorder = "1.4"
bytes = "1.0"
chrono = { version = "0.4", optional = true, features = ["serde"] }
flate2 = "1.0"
futures-util = "0.3"
futures_codec = "0.4"
hyper = { version = "0.14", features = ["client", "http1", "tcp", "stream"] }
hyperlocal = { version = "0.8", optional = true }
log = "0.4"
mime = "0.3"
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "^1.19", features = ["fs", "io-util"] }
url = "2.1"
# Native TLS
native-tls = { version = "^0.2", optional = true }
hyper-tls = { version = "^0.5", optional = true }
# Rust TLS
rustls = { version = "^0.20", optional = true }
hyper-rustls = { version = "^0.23", optional = true }

# XXX: This is a temporary dependency for the reexport! macro in lib.rs. Remove
# me before 0.9.0 is released.
paste = "1.0"

[dev-dependencies]
env_logger = "0.8"
# Required for examples to run
futures = "0.3.1"
tokio = { version = "^1.19", features = ["macros", "rt-multi-thread"] }

[features]
rust-tls = ["dep:rustls", "dep:hyper-rustls"]
native-tls = ["dep:native-tls"]
# native-tls-vendored = ["native-tls", "dep:native-tls/vendored"]
# native-tls-alpn = ["native-tls", "dep:native-tls/alpn"]

unix-socket = ["dep:hyperlocal"]

default = ["dep:chrono", "rust-tls"]
